--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    // "module": "esnext",
+    // "moduleResolution": "node",
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
