--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DB_CONNECT=mongodb+srv://kenchose:Pham2Biology@cluster0-is4ph.mongodb.net/test?retryWrites=true&w=majority
+
+TOKEN_SECRET=thisisasecret
