--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
