--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
