--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
