--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "morgan": "^1.9.1",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^4.1.0",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
