--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngx-pagination": "^4.1.0",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
