--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
+    "stripe": "^7.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
