--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~8.0.1",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
@@ -20,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@hapi/joi": "^15.1.1",
+    "@types/googlemaps": "^3.38.1",
     "@types/jquery": "^3.3.31",
     "angular2-flash-messages": "^3.0.1",
     "bcryptjs": "^2.4.3",
@@ -27,7 +29,6 @@
     "bootstrap": "^4.3.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.0.0",
-    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "faker": "^4.1.0",
@@ -60,6 +61,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "dotenv": "^8.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
