--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@hapi/joi": "^15.1.1",
     "@types/googlemaps": "^3.38.1",
     "@types/jquery": "^3.3.31",
+    "@types/stripe-checkout": "^1.0.3",
+    "@types/stripe-v3": "^3.1.9",
     "angular2-flash-messages": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
