--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/stripe-checkout": "^1.0.3",
     "@types/stripe-v3": "^3.1.9",
     "angular2-flash-messages": "^3.0.1",
+    "angularx-social-login": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -43,6 +44,7 @@
     "ngx-pagination": "^4.1.0",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
